# aoc-2024

./: Cargo.toml  README.md
crates/day-10a/: Cargo.toml
crates/day-10a/src/: main.rs
crates/day-10b/: Cargo.toml
crates/day-10b/src/: main.rs
crates/day-11a/: Cargo.toml
crates/day-11a/src/: main.rs
crates/day-1a/: Cargo.toml
crates/day-1a/src/: main.rs
crates/day-1b/: Cargo.toml
crates/day-1b/src/: main.rs
crates/day-2a/: Cargo.toml
crates/day-2a/src/: main.rs
crates/day-2b/: Cargo.toml
crates/day-2b/src/: main.rs
crates/day-3a/: Cargo.toml
crates/day-3a/src/: main.rs
crates/day-3b/: Cargo.toml
crates/day-3b/src/: main.rs
crates/day-4a/: Cargo.toml
crates/day-4a/src/: main.rs
crates/day-4b/: Cargo.toml
crates/day-4b/src/: main.rs
crates/day-5a/: Cargo.toml
crates/day-5a/src/: main.rs
crates/day-5b/: Cargo.toml
crates/day-5b/src/: main.rs
crates/day-6a/: Cargo.toml
crates/day-6a/src/: main.rs
crates/day-7a/: Cargo.toml
crates/day-7a/src/: main.rs
crates/day-7b/: Cargo.toml
crates/day-7b/src/: main.rs
crates/day-8a/: Cargo.toml
crates/day-8a/src/: main.rs
crates/day-8b/: Cargo.toml
crates/day-8b/src/: main.rs
crates/day-9a/: Cargo.toml
crates/day-9a/src/: main.rs
crates/utilities/: Cargo.toml
crates/utilities/src/: maps.rs
